# casperflow

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  USER_GUIDE.md  package-lock.json  package.json
contracts/: Cargo.toml  Makefile  rust-toolchain.toml
contracts/.cargo/: config.toml
contracts/src/: entry_points.rs  errors.rs  events.rs  lib.rs  remittance.rs  storage.rs  utils.rs
contracts/tests/: integration_tests.rs  unit_tests.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  Providers.tsx  index.css  main.tsx
frontend/src/components/: ContributionTracker.tsx  EmptyState.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  RefundClaimer.tsx  RemitForm.tsx  RemittanceCard.tsx  RemittanceList.tsx  StatsCard.tsx  WalletConnect.tsx
frontend/src/hooks/: useCasperContract.ts
frontend/src/lib/: casper.ts  constants.ts  utils.ts
frontend/src/types/: remittance.ts
scripts/: deploy-old.ts  deploy.js  deploy.ts  extract-pubkey-hex.ts  generate-keys-with-mnemonic.ts  generate-keys.ts  package.json  tsconfig.json  verify-setup.sh
